--- a/vision_models/environment.yml
+++ b/vision_models/environment.yml
@@ -103,9 +103,10 @@ dependencies:
   - tensorboard=2.11.0=py39h06a4308_0
   - tensorboard-data-server=0.6.0=py39hca6d32c_0
   - tensorboard-plugin-wit=1.8.1=py39h06a4308_0
+  - timm=0.4.12=py39h06a4308_0
   - tk=8.6.12=h1ccaba5_0
   - toolz=0.12.0=py39h06a4308_0
-  - torchvision=0.8.2=cpu_py39ha229d99_0
+  - torchvision=0.14.1=py39_cu116
   - tqdm=4.65.0=py39hb070fc8_0
   - typing-extensions=4.5.0=py39h06a4308_0
   - typing_extensions=4.5.0=py39h06a4308_0
